crates/cli/tests/snapshots/snapshot_tests__codeclimate_circular_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/circular-dependency",
    "description": "Circular dependency: src/a.ts → src/b.ts",
    "severity": "major",
    "fingerprint": "fallow/circular-dependency:src/a.ts:3",
    "location": {
      "path": "src/a.ts",
      "lines": {
        "begin": 3
      }
    }
  }
]
