crates/cli/tests/snapshots/snapshot_tests__codeclimate_health_with_production_coverage.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/high-complexity",
    "description": "'processData' has cyclomatic complexity 25 (threshold: 20) and cognitive complexity 30 (threshold: 15)",
    "categories": [
      "Complexity"
    ],
    "severity": "major",
    "fingerprint": "d4ee093a5fdb5d49",
    "location": {
      "path": "src/complex.ts",
      "lines": {
        "begin": 42
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/production-review-required",
    "description": "'coldPath' production coverage verdict: review required (0 invocations)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "4dc8b128005d6955",
    "location": {
      "path": "src/cold.ts",
      "lines": {
        "begin": 14
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/production-coverage-unavailable",
    "description": "'lateBound' production coverage verdict: coverage unavailable (untracked)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "25b3f5df2071893a",
    "location": {
      "path": "src/unknown.ts",
      "lines": {
        "begin": 8
      }
    }
  }
]
