crates/cli/tests/snapshots/snapshot_tests__codeclimate_mixed_severity.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-file",
    "description": "File is not reachable from any entry point",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "e3912cb6bb9b0212",
    "location": {
      "path": "src/dead.ts",
      "lines": {
        "begin": 1
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-export",
    "description": "Export 'helperFn' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "ebe2360218821412",
    "location": {
      "path": "src/utils.ts",
      "lines": {
        "begin": 10
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-type",
    "description": "Type export 'OldType' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "deb0e9de35cc06d9",
    "location": {
      "path": "src/types.ts",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-dependency",
    "description": "Package 'lodash' is in dependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "1d04d08d81daf650",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-dev-dependency",
    "description": "Package 'jest' is in devDependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "2a4393b133ea1523",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-optional-dependency",
    "description": "Package 'fsevents' is in optionalDependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "66616a09b329d842",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/type-only-dependency",
    "description": "Package 'zod' is only imported via type-only imports (consider moving to devDependencies)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "34d2064787c07f45",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 8
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/test-only-dependency",
    "description": "Package 'msw' is only imported by test files (consider moving to devDependencies)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "ebc538b211ef05f5",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 12
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-enum-member",
    "description": "Enum member 'Status.Deprecated' is never referenced",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "090d4d65832bf868",
    "location": {
      "path": "src/enums.ts",
      "lines": {
        "begin": 8
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-class-member",
    "description": "Class member 'UserService.legacyMethod' is never referenced",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "25579ea7b6940453",
    "location": {
      "path": "src/service.ts",
      "lines": {
        "begin": 42
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unresolved-import",
    "description": "Import './missing-module' could not be resolved",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "231a7ed9e16a19a6",
    "location": {
      "path": "src/app.ts",
      "lines": {
        "begin": 3
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unlisted-dependency",
    "description": "Package 'chalk' is imported but not listed in package.json",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "2ef210a41606f3aa",
    "location": {
      "path": "src/cli.ts",
      "lines": {
        "begin": 2
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/duplicate-export",
    "description": "Export 'Config' appears in multiple modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "da73cab5c65b029d",
    "location": {
      "path": "src/config.ts",
      "lines": {
        "begin": 15
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/duplicate-export",
    "description": "Export 'Config' appears in multiple modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "cc6a09c8dc227321",
    "location": {
      "path": "src/types.ts",
      "lines": {
        "begin": 30
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/circular-dependency",
    "description": "Circular dependency: src/a.ts → src/b.ts",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "405f0abed155920d",
    "location": {
      "path": "src/a.ts",
      "lines": {
        "begin": 3
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-catalog-entry",
    "description": "Catalog entry 'is-even' is not referenced by any workspace package",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "01c68b8e65ee42b9",
    "location": {
      "path": "pnpm-workspace.yaml",
      "lines": {
        "begin": 6
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-catalog-entry",
    "description": "Catalog entry 'old-thing' (catalog 'legacy') is not referenced by any workspace package",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "2d5072d3451b44dd",
    "location": {
      "path": "pnpm-workspace.yaml",
      "lines": {
        "begin": 12
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/empty-catalog-group",
    "description": "Catalog group 'react17' has no entries",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "03506bd5a376e100",
    "location": {
      "path": "pnpm-workspace.yaml",
      "lines": {
        "begin": 10
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unresolved-catalog-reference",
    "description": "Package 'old-react' is referenced via `catalog:react17` but catalog 'react17' does not declare it; `pnpm install` will fail (available in: react18)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "3b583c29be84724a",
    "location": {
      "path": "packages/app/package.json",
      "lines": {
        "begin": 14
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-dependency-override",
    "description": "Override `axios` forces version `^1.6.0` but no workspace package depends on `axios` (May be an intentional pin for a transitive CVE that no workspace package depends on directly)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "9e455c649fd184fe",
    "location": {
      "path": "pnpm-workspace.yaml",
      "lines": {
        "begin": 9
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/misconfigured-dependency-override",
    "description": "Override `@types/react@<<18` -> `18.0.0` is malformed: override key cannot be parsed",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "21be520b86ce0207",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 3
      }
    }
  }
]
