crates/cli/tests/snapshots/snapshot_tests__codeclimate_multiple_exports_same_file.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-export",
    "description": "Export 'helperFn' is never imported by other modules",
    "severity": "major",
    "fingerprint": "fallow/unused-export:src/utils.ts:10",
    "location": {
      "path": "src/utils.ts",
      "lines": {
        "begin": 10
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-export",
    "description": "Export 'formatDate' is never imported by other modules",
    "severity": "major",
    "fingerprint": "fallow/unused-export:src/utils.ts:25",
    "location": {
      "path": "src/utils.ts",
      "lines": {
        "begin": 25
      }
    }
  },
  {
    "type": "issue",
    "check_name": "fallow/unused-export",
    "description": "Export 'capitalize' is never imported by other modules",
    "severity": "major",
    "fingerprint": "fallow/unused-export:src/helpers.ts:1",
    "location": {
      "path": "src/helpers.ts",
      "lines": {
        "begin": 1
      }
    }
  }
]
