crates/cli/tests/snapshots/snapshot_tests__codeclimate_re_export_variant.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "fallow/unused-export",
    "description": "Re-export 'reExported' is never imported by other modules",
    "severity": "major",
    "fingerprint": "fallow/unused-export:src/index.ts:1",
    "location": {
      "path": "src/index.ts",
      "lines": {
        "begin": 1
      }
    }
  }
]
